首页 头部 底部修改

--- a/views/dorawhite/public/footer.html
+++ b/views/dorawhite/public/footer.html
@@ -4,13 +4,16 @@
 </div>
 <footer id="footer">
     <div class="container">
+        <div class="footer-links">
+            <a href="http://shop.bw.com/" target="_blank">购买入口</a>
+            <a href="/contact___B1uJ3wjbm">联系我们</a>
+        </div>
         <ul>
-            <li>自豪的采用&nbsp;
-                <a href="https://github.com/doramart/DoraCMS" rel="nofollow" target="_blank" title="代码在这里">DoraCMS v2.1
+            <li>
                 </a>&nbsp;Copyright (c) 2018 &nbsp;
                 <a href="http://www.miitbeian.gov.cn/" rel="nofollow" target="_blank">
                     {{siteInfo.configs.registrationNo}}
-                </a> All Rights Reserved
+                </a> 慧智科技 All Rights Reserved
                 <a href="/sitemap.html" target="_blank">{{lk.lc_sitemap}}</a>
             </li>
         </ul>
