--- a/views/dorawhite/public/header.html
+++ b/views/dorawhite/public/header.html
@@ -77,6 +77,9 @@
                         </div>
                     </div> -->
                 </div>
+                <div class="header-right fr">
+                    <h1><a href="/en" class="yuyan_a">En</a><a href=""><img src="/themes/{{staticforder}}/images/weixin_icon.png"><dl><dt><img src="/themes/{{staticforder}}/images/weixin_arrow_up.png"></dt><dd><img src="/themes/{{staticforder}}/images/weixin_arrow_up.png"></dd></dl></a></h1>
+                </div>
             </div>
         </div>
     </div>
