--- a/src/index/dorawhite/css/white.scss
+++ b/src/index/dorawhite/css/white.scss
@@ -9,7 +9,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
     color: #333333;
     line-height: 1.8;
-    background: #f5f5f5;
+    // background: #f5f5f5;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Ubuntu, Helvetica Neue, Helvetica, Arial, PingFang SC, Hiragino Sans GB, Microsoft YaHei UI, Microsoft YaHei, Source Han Sans CN, sans-serif;
 }
 
@@ -153,6 +153,10 @@ header {
             }
         }
     }
+
+    .header-main {
+        position: relative;
+    }
     #navWrapper {
         #navScroller {
             ul {
@@ -160,10 +164,24 @@ header {
                     display: inline-block;
                     padding: 0 20px;
                     line-height: 62px;
+                    font-size: 16px;
                 }
             }
         }
     }
+    .header-right { position: absolute; right: 50px; top: 0;}
+    .header-right h1{ height:31px;}
+    .header-right h1 a{ margin-right:16px; position:relative; float:left;}
+    .header-right h1 a.yuyan_a{ background-color:#666; border-radius:100%; height:30px; width:30px; font-size:11px; color:#FFF; line-height:30px; text-align:center;}
+    .header-right h1 a img{ height:30px; vertical-align: top;}
+    .header-right a dl{ width:156px; height:140px; padding:8px 8px; background-color:#999; border-radius:5px; position:absolute; top:42px; left:-64px; z-index:999; display:none;}
+    .header-right a dl dd{ width:140px; height:140px; overflow:hidden; border-radius:5px;}
+    .header-right a dl dd img{ width:100%; height:auto;}
+    .header-right a dl dt{ position:absolute; left:0px; right:0px; height:16px; top:-8px; text-align:center;}
+    .header-right a dl dt img{ height:10px; margin:0px auto;}
+    .header-right a:hover{ color:#28A7E1;}
+    .header-right a:hover dl{ display:block;}
+
     .topNav {
         line-height: 62px;
         .navbar-right {
@@ -985,12 +1003,23 @@ header {
     font-size: 14px;
     padding: 35px 0;
     color: #5f676f;
-    background: #2d3237;
-    text-align: center;
+    background: #eeeef4;
+    text-align: left;
     margin-top: 15px;
+    .footer-links {
+        margin-left: 14px;
+        a {
+            color: #2AAAE2;
+            font-size: 15px;
+            margin-right: 80px;
+            &:hover {
+                color: #606060;
+            }
+        }
+    }
     ul {
         li {
-            text-align: center;
+            text-align: left;
             line-height: 35px;
             padding: 0 10px;
             a {
