添加轮播插件owl.carousel

--- a/views/dorawhite/index.html
+++ b/views/dorawhite/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="col-md-12 main-container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="">
                     {% include "./public/newsListTemp.html" %}
                 </div>
 
