--- a/views/dorawhite/public/defaultTemp.html
+++ b/views/dorawhite/public/defaultTemp.html
@@ -26,8 +26,12 @@
     <script src="https://cdn.bootcss.com/toastr.js/latest/toastr.min.js"></script>
     <link href="https://cdn.bootcss.com/toastr.js/latest/toastr.min.css" rel="stylesheet">
     <!--default theme-->
+    <link rel="stylesheet" href="/plugins/slider/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/plugins/slider/css/owl.theme.default.min.css">
+    <script src="/plugins/slider/owl.carousel.min.js" type="text/javascript"></script>
     <script src="/themes/{{staticforder}}/js/dora.front.js?version={{siteInfo.version}}" type="text/javascript"></script>
     <link href="/themes/{{staticforder}}/css/white.css?version={{siteInfo.version}}" rel="stylesheet">
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
